k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: idempiere
  labels:
    app.kubernetes.io/name: idempiere
    app.kubernetes.io/part-of: erp
